# Bot_Aware_InfluenceScore

./: .gitignore  GEMINI.md
bot-influence-scoring/: PHASE1.md  PHASE2.md  PHASE5.md  README.md  pyproject.toml  verify_setup.py
bot-influence-scoring/PHASES of this project/: PHASE3.md  PHASE4.md  PHASE6.md
bot-influence-scoring/api/: main.py
bot-influence-scoring/api/db/: session.py
bot-influence-scoring/api/routers/: comparison.py  metrics.py  nodes.py  scores.py
bot-influence-scoring/api/schemas/: pydantic_models.py
bot-influence-scoring/data/cresci-2017/processed/: bot_probabilities.pt  hetero_graph.pt  influence_results.csv
bot-influence-scoring/frontend/: package-lock.json  package.json  tailwind.config.js
bot-influence-scoring/frontend/src/: App.tsx  index.css
bot-influence-scoring/frontend/src/hooks/: useInfluenceScores.ts  useJobProgress.ts  useTheme.ts
bot-influence-scoring/frontend/src/lib/: api.ts
bot-influence-scoring/frontend/src/store/: analysisStore.ts  datasetStore.ts
bot-influence-scoring/frontend/src/views/: BotAuditPanel.tsx  GraphExplorer.tsx  Leaderboard.tsx  (+5 more)
bot-influence-scoring/models/: gat_cresci2017.pt
bot-influence-scoring/notebooks/: 01_EDA_cresci.py  03_graph_construction.py  04_graph_viz.py  05_gat_training.py  06_baselines.py  07_influence_scoring.py
bot-influence-scoring/src/graph/: builder.py  features.py
bot-influence-scoring/src/influence/: composite.py  hits.py  ic.py  pagerank.py  sanitize.py
bot-influence-scoring/src/models/: gat.py
bot-influence-scoring/src/training/: evaluation.py  trainer.py
(+12 files in other folders)
