[project]
name = "bot-influence-scoring"
version = "0.1.0"
description = "Bot-aware influence scoring in social networks using GNNs"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch",
    "torch-geometric",
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "xgboost",
    "torchmetrics",
    "tqdm",
    "joblib",
    "fastapi",
    "uvicorn",
    "celery",
    "redis",
    "sqlalchemy",
    "pydantic",
    "python-multipart",
    "dvc",
    "dvc-gdrive"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
